# Open_Forge

./: .gitignore  README.md  all_tests_dump.txt  pyproject.toml
config/: model_versions.yaml  vllm_config.yaml
configs/: canonical_functions.yaml  default.yaml  sources.yaml
db/: schema_validator.py
db/migrations/: 001_initial_schema.sql  002_ann_index_helper.sql
docs/: BACKUP_STRATEGY.md  DEPLOYMENT_NOTES.md  MODEL_COMPATIBILITY_MATRIX.md
documents/: PROJECT_CONTEXT.md  README.md  WHATS_LEFT.md  objectives.md  restructure_docs.md
documents/architecture/: PROJECT_CONTEXT.md  SCIENTIFIC_PROMPT_ANALYSIS_LOG.md  SYSTEM_WHITEBOX_TRACE.md  problem_1_solution.md
documents/assessments/: PARSING_SCOPE_AND_ARCHITECTURE.md  p1_assessment.md  p1_assessment_filled.md
documents/brainstorming/: Book_parsing_pipeline_proposal.md  Diagram_relevance_analysis.md  SCHEMA_UPDATE_ENGINE_DESIGN.md  WORKLIST_ANALYSIS.md
documents/decisions/: 01_INTENT_PARSING_SCHEMA.md  02_REQUIREMENT_COMPLETION_ENGINE.md  03_RETRIEVAL_AND_KB_STRATEGY.md  04_DATABASE_SCHEMA.md  Search_controller_decision.md
documents/guides/: CODING_STANDARDS_P1.md  CURSOR_PHASE_3_EXTRACTION.md  CURSOR_PROMPT_PHASE2_TSR.md  CURSOR_PROMPT_PHASE4.md  DEVELOPMENT_WORKFLOW_PHASES_2_3_4.md  MASTER_GUIDE_PHASES_2_3_4.md  PROJECT_BOOTSTRAP_GUIDE.md  QUICK_REFERENCE_PATTERNS.md  phase2_mock_outputs.py
documents/improvement_plan/: 05_SEARCH_STORAGE_DEPLOYMENT_ARCHITECTURE.md  LLM_temp_and_other_exploration.md  (+2 more)
p1-parser/: README.md
prototypes/: README.md
src/: config.py  orchestrator.py
tests/: conftest.py
(+185 files in other folders)
