[project]
name = "openforge-pcb"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "instructor>=1.0",
    "pdf2image>=1.16",
    "pdfplumber>=0.10",
    "camelot-py[cv]>=0.11",
    "opencv-python-headless>=4.8",
    "pillow>=10.0",
    "transformers>=4.40",
    "torch>=2.1",
    "torchvision>=0.16",
    "ultralytics>=8.0",
    "networkx>=3.0",
    "neo4j>=5.0",
    "faiss-cpu>=1.7",
    "spacy>=3.7",
    "black>=23.0",
    "mypy>=1.5",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.11",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]